# test_whisperx

./: Dockerfile  docker-compose.yml  entrypoint.sh  prewarm_models.py  pyproject.toml
src/: transcriber.py
